// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalInformationSectionContainer component should render default view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(AdditionalInformationSection) />
</ContextProvider>
`;

exports[`AdditionalInformationSectionContainer component should render disabled view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(AdditionalInformationSection)
    disabled={true}
  />
</ContextProvider>
`;
